#13
+ using lambdas
+ extracted common code in ifs